--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "click>=8.1.7",
     "openai>=1.56.1",
     "psycopg[binary]>=3.2.3",
     "pydantic>=2.10.3",
     "python-dotenv>=1.0.1",
+    "simplejson>=3.19.3",
 ]
 
 [dependency-groups]
