--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "click>=8.1.7",
     "openai>=1.56.1",
+    "polars>=1.17.1",
     "psycopg[binary]>=3.2.3",
     "pydantic>=2.10.3",
     "python-dotenv>=1.0.1",
