--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -3,6 +3,11 @@ name: Run Eval Suite
 on:
   workflow_dispatch:
     inputs:
+      branch:
+        description: 'Branch of pgai to use'
+        required: true
+        default: 'main'
+        type: string
       task:
         description: What task to evaluate
         required: true
@@ -28,6 +33,8 @@ jobs:
       - uses: actions/checkout@v4
 
       - uses: ./.github/actions/setup-pgai
+        with:
+          branch: ${{ inputs.branch }}
 
       - uses: astral-sh/setup-uv@v5
         with:
