--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,6 @@
 ANTHROPIC_API_KEY=
 OLLAMA_HOST=
 OPENAI_API_KEY=
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
-POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
+PGAI_POSTGRES_DSN=postgres://postgres:postgres@localhost:5432
+REPORT_POSTGRES_DSN=postgres://postgres:postgres@localhost:5432/tsdb
+SOURCE=local
