--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@ __pycache__
 
 datasets/*/evals/*/actual_*
 datasets/*/evals/*/error.txt
-/results/
+results/*
+!results/.gitkeep
 results.json
 
 /bird_minidev
