--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,10 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "click>=8.1.7",
+    "flask>=3.1.0",
     "openai>=1.56.1",
     "polars>=1.17.1",
+    "psycopg-pool>=3.2.6",
     "psycopg[binary]>=3.2.3",
     "pydantic>=2.10.3",
     "python-dotenv>=1.0.1",
