--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,6 @@
 ANTHROPIC_API_KEY=
 OLLAMA_HOST=
 OPENAI_API_KEY=
-PGAI_POSTGRES_DSN=postgres://postgres:postgres@localhost:5432
+POSTGRES_DSN=postgres://postgres:postgres@localhost:5432
 REPORT_POSTGRES_DSN=postgres://postgres:postgres@localhost:5432/tsdb
 SOURCE=local
