--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,12 @@ dependencies = [
     "flask>=3.1.0",
     "langchain-huggingface>=0.1.2",
     "openai>=1.56.1",
+    "pgai",
     "polars>=1.17.1",
     "psycopg-pool>=3.2.6",
     "psycopg[binary]>=3.2.3",
     "pydantic>=2.10.3",
+    "pydantic-ai>=0.1.7",
     "python-dotenv>=1.0.1",
     "simplejson>=3.19.3",
     "sql-metadata>=2.15.0",
@@ -27,3 +29,6 @@ dev = [
 
 [tool.ruff.lint]
 extend-select = ["B", "I"]
+
+[tool.uv.sources]
+pgai = { path = "../pgai/projects/pgai", editable = true }
