--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "psycopg[binary]>=3.2.3",
     "pydantic>=2.10.3",
     "pydantic-ai>=0.1.7",
+    "pytest>=8.3.5",
     "python-dotenv>=1.0.1",
     "pyyaml>=6.0.2",
     "simplejson>=3.19.3",
