--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -72,6 +72,7 @@ jobs:
         run: |
           echo -e "
           ANTHROPIC_API_KEY=${{ secrets.ANTHROPIC_API_KEY }}
+          MISTRAL_API_KEY=${{ secrets.MISTRAL_API_KEY }}
           OLLAMA_HOST=http://localhost:11434
           OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}
           POSTGRES_DSN=postgresql://postgres:postgres@localhost:5555
@@ -136,6 +137,7 @@ jobs:
         run: |
           echo -e "
           ANTHROPIC_API_KEY=${{ secrets.ANTHROPIC_API_KEY }}
+          MISTRAL_API_KEY=${{ secrets.MISTRAL_API_KEY }}
           OLLAMA_HOST=http://localhost:11434
           OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}
           POSTGRES_DSN=postgresql://postgres:postgres@localhost:5555
@@ -203,6 +205,7 @@ jobs:
         run: |
           echo -e "
           ANTHROPIC_API_KEY=${{ secrets.ANTHROPIC_API_KEY }}
+          MISTRAL_API_KEY=${{ secrets.MISTRAL_API_KEY }}
           OLLAMA_HOST=http://localhost:11434
           OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}
           POSTGRES_DSN=postgresql://postgres:postgres@localhost:5555
